added dashboard and changed paths

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "bootstrap": "4.1.1",
     "core-js": "2.4.1",
     "jquery": "3.2.1",
+    "ng2-charts": "1.6.0",
+    "ng-chartist": "1.1.1",
+    "ng2-smart-table": "1.2.2",
     "ngx-perfect-scrollbar": "5.0.0",
     "pace-js": "1.0.2",
     "popper.js": "1.12.5",
